--- a/app/src/main/res/layout/fragment_artist.xml
+++ b/app/src/main/res/layout/fragment_artist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".presentation.fragments.ArtistFragment">
+    tools:context=".presentation.artistScreen.ArtistFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_my_music"
