--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.fragments.FavouriteFragment">
+    tools:context=".presentation.favouriteScreen.FavouriteFragment">
 
     <LinearLayout
         android:layout_width="wrap_content"
