--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,42 +7,42 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.musicplayer.presentation.fragments.HomeFragment"
+        android:name="com.example.musicplayer.presentation.homeScreen.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
 
     </fragment>
     <fragment
         android:id="@+id/myMusicFragment"
-        android:name="com.example.musicplayer.presentation.fragments.MyMusicFragment"
+        android:name="com.example.musicplayer.presentation.musicScreen.MyMusicFragment"
         android:label="fragment_my_music"
         tools:layout="@layout/fragment_my_music" >
 
     </fragment>
     <fragment
         android:id="@+id/artistFragment"
-        android:name="com.example.musicplayer.presentation.fragments.ArtistFragment"
+        android:name="com.example.musicplayer.presentation.artistScreen.ArtistFragment"
         android:label="fragment_artist"
         tools:layout="@layout/fragment_artist" >
 
     </fragment>
     <fragment
         android:id="@+id/playListFragment"
-        android:name="com.example.musicplayer.ui.fragments.PlayListFragment"
+        android:name="com.example.musicplayer.presentation.playlistScreen.PlayListFragment"
         android:label="fragment_play_list"
         tools:layout="@layout/fragment_play_list" >
 
     </fragment>
     <fragment
         android:id="@+id/favouriteFragment"
-        android:name="com.example.musicplayer.ui.fragments.FavouriteFragment"
+        android:name="com.example.musicplayer.presentation.favouriteScreen.FavouriteFragment"
         android:label="fragment_favourite"
         tools:layout="@layout/fragment_favourite" >
 
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.example.musicplayer.presentation.fragments.SplashFragment"
+        android:name="com.example.musicplayer.presentation.splashScreen.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
 
